--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "spiced-social-network",
+    "name": "gif-search-engine",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -25,6 +25,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.15.2",
         "compression": "^1.7.0",
+        "config": "^1.30.0",
         "cookie-parser": "^1.4.3",
         "cookie-session": "^2.0.0-alpha.2",
         "csurf": "^1.9.0",
@@ -34,15 +35,15 @@
         "multer": "^1.3.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-modal": "^3.4.4",
         "react-redux": "^5.0.5",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.5.3",
-        "socket-cookie-session": "github:spicedacademy/socket-cookie-session",
+        "s3": "^4.4.0",
         "socket.io": "^2.0.3",
-        "spiced-pg": "spicedacademy/spiced-pg",
         "uid-safe": "^2.1.4",
         "webpack": "^1.14.0",
         "webpack-dev-middleware": "^1.8.4"
