--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gif-search-engine",
+    "name": "juicy",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -22,8 +22,10 @@
         "babel-preset-es2015": "^6.18.0",
         "babel-preset-latest": "^6.16.0",
         "babel-preset-react": "^6.16.0",
+        "base64-img": "^1.0.4",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.15.2",
+        "clarifai": "^2.7.1",
         "compression": "^1.7.0",
         "config": "^1.30.0",
         "cookie-parser": "^1.4.3",
@@ -33,17 +35,20 @@
         "http-proxy-middleware": "^0.17.4",
         "knox": "^0.9.2",
         "multer": "^1.3.0",
+        "path": "^0.12.7",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-modal": "^3.4.4",
         "react-redux": "^5.0.5",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
+        "react-router-redux": "^5.0.0-alpha.9",
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.5.3",
         "s3": "^4.4.0",
         "socket.io": "^2.0.3",
+        "spiced-pg": "github:spicedacademy/spiced-pg",
         "uid-safe": "^2.1.4",
         "webpack": "^1.14.0",
         "webpack-dev-middleware": "^1.8.4"
