--- a/package.json
+++ b/package.json
@@ -34,10 +34,16 @@
         "express": "^4.14.0",
         "http-proxy-middleware": "^0.17.4",
         "knox": "^0.9.2",
+        "markovchain": "^1.0.2",
+        "markovchain-generate": "^1.0.11",
+        "markovinator": "^0.1.0",
+        "moment": "^2.22.1",
         "multer": "^1.3.0",
         "path": "^0.12.7",
         "react": "^16.2.0",
+        "react-big-calendar": "^0.19.1",
         "react-dom": "^16.2.0",
+        "react-dropzone": "^4.2.9",
         "react-modal": "^3.4.4",
         "react-redux": "^5.0.5",
         "react-router": "^4.2.0",
