--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "cookie-session": "^2.0.0-alpha.2",
         "csurf": "^1.9.0",
         "express": "^4.14.0",
+        "fs": "0.0.1-security",
         "http-proxy-middleware": "^0.17.4",
         "knox": "^0.9.2",
         "markovchain": "^1.0.2",
